-- This cabal file is dummy file to install dependet haskell packages into
-- Travis.CI
name:                helm-ghc-errors
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Syoudi Yokoyama
maintainer:          quantumcars@gmail.com
copyright:           Syoudai Yokoyama
category:            Development
build-type:          Simple
cabal-version:       >=1.18

library
  default-language:    Haskell2010
  build-depends:
        base >=4.7 && <4.8
        , happy
        , ghc-mod ==4.1.0
